fix: editor mobile padding aligned with header/frontmatter (px-4)

--- a/client-web/src/app/globals.css
+++ b/client-web/src/app/globals.css
@@ -156,17 +156,6 @@ main {
 
 /* Mobile: reduce BlockNote internal padding */
 @media (max-width: 767px) {
-  .motion-editor .bn-container {
-    padding-left: 4px;
-    padding-right: 4px;
-  }
-  .motion-editor .bn-editor {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .motion-editor .bn-block-group {
-    padding-left: 0 !important;
-  }
   .motion-editor .bn-side-menu {
     display: none;
   }
